Add codespaces config

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,14 @@
-FROM ghcr.io/ddev/ddev-ssh-agent:latest
+FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
-# Install additional tools
+# Install additional tools and DDEV
 RUN apt-get update && apt-get install -y \
     git \
     curl \
     unzip \
     lsb-release \
+    ca-certificates \
+    gnupg \
     && apt-get clean
+
+# Install DDEV
+RUN curl -fsSL https://raw.githubusercontent.com/drud/ddev/master/scripts/install_ddev.sh | bash
