--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,57 @@
 {
-	"name": "Storybook",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "."
+	"name": "DDEV Drupal 11 Development",
+	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest",
+			"enableNonRootDocker": "true"
+		},
+		"ghcr.io/devcontainers/features/php:1": {
+			"version": "8.3",
+			"installComposer": "true"
+		},
+		"ghcr.io/devcontainers/features/node:1": {
+			"version": "20"
+		}
 	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-azuretools.vscode-docker",
-				"dbaeumer.vscode-eslint",
+				"ms-vscode.vscode-json",
+				"bradlc.vscode-tailwindcss",
+				"bmewburn.vscode-intelephense-client",
+				"mrmlnc.vscode-apache",
+				"ms-vscode.vscode-typescript-next",
+				"formulahendry.auto-rename-tag",
 				"esbenp.prettier-vscode"
-			]
+			],
+			"settings": {
+				"php.validate.executablePath": "/usr/local/bin/php",
+				"php.suggest.basic": false,
+				"intelephense.files.maxSize": 5000000,
+				"files.associations": {
+					"*.module": "php",
+					"*.install": "php",
+					"*.inc": "php",
+					"*.profile": "php",
+					"*.theme": "php"
+				}
+			}
 		}
 	},
-	"postCreateCommand": "ddev start",
-	"remoteUser": "vscode",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	"forwardPorts": [8080, 8025, 8036],
+	"portsAttributes": {
+		"8080": {
+			"label": "Drupal Site",
+			"onAutoForward": "openBrowser"
+		},
+		"8025": {
+			"label": "Mailhog"
+		},
+		"8036": {
+			"label": "PhpMyAdmin"
+		}
 	},
-	"mounts": ["source=ddev-global-cache,target=/home/vscode/.ddev,volume"]
+	"postCreateCommand": "bash .devcontainer/post-create.sh",
+	"remoteUser": "codespace"
 }
