--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,61 @@
-# Composer
-/vendor/
-/composer.lock
-
-# Drupal
+# Drupal specific
 /web/core/
 /web/modules/contrib/
 /web/themes/contrib/
-/web/sites/default/settings.php
+/web/profiles/contrib/
+/web/libraries/
 /web/sites/default/files/
+/web/sites/default/settings.local.php
+/web/sites/default/settings.php
+/web/sites/default/services.yml
+/web/sites/simpletest/
 
 # DDEV
-.ddev/secrets/
+/.ddev/db_snapshots/
+/.ddev/logs/
+/.ddev/mysql/
+/.ddev/nginx/
+/.ddev/php/
+/.ddev/postgres/
+/.ddev/redis/
+/.ddev/solr/
+/.ddev/traefik/
+
+# Composer
+/vendor/
+composer.lock
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Database snapshots (keep your main backup but ignore temporary ones)
+/db/site.sql
+/db/*.sql
+!/db/site.sql.gz
+
+# Files directory (optional - you might want to version these)
+files/
+
+# Logs
+*.log
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Temporary files
+tmp/
+temp/
