--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,10 @@
         "drupal/core-project-message": "^11.2",
         "drupal/core-recipe-unpack": "^11.2",
         "drupal/core-recommended": "^11.2",
+        "drupal/editor_advanced_link": "^2.3",
         "drupal/gin": "^5.0",
-        "drupal/layout_paragraphs": "^2.1",
-        "drupal/mercury_editor": "^2.2",
+        "drupal/linkit": "^7.0",
+        "drupal/paragraphs": "^1.19",
         "drupal/twig_field_value": "^2.0",
         "drupal/twig_tweak": "^3.4",
         "drush/drush": "^13.6"
