--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   breakpoint: 0
   ckeditor5: 0
   components: 0
+  config: 0
   datetime: 0
   datetime_range: 0
   dblog: 0
@@ -21,13 +22,12 @@ module:
   image: 0
   inline_form_errors: 0
   layout_discovery: 0
-  layout_paragraphs: 0
   link: 0
+  linkit: 0
   media: 0
   media_library: 0
   menu_link_content: 0
   menu_ui: 0
-  mercury_editor: 0
   mysql: 0
   node: 0
   options: 0
@@ -35,7 +35,6 @@ module:
   path: 0
   path_alias: 0
   responsive_image: 0
-  style_options: 0
   system: 0
   taxonomy: 0
   telephone: 0
@@ -53,4 +52,5 @@ theme:
   olivero: 0
   claro: 0
   gin: 0
+  surface: 0
 profile: minimal
