--- a/web/themes/custom/surface/surface.info.yml
+++ b/web/themes/custom/surface/surface.info.yml
@@ -4,20 +4,29 @@ description: 'A clean, accessible, and flexible Drupal front-end theme.'
 alt text: 'Screenshot of Surface, Drupal front-end theme.'
 package: Core
 core_version_requirement: ^10 || ^11
-base theme: false
+base theme: olivero
+dependencies:
+  - components
+  - twig_tweak
+  - twig_field_value
 
 libraries:
   - surface/global
 
 regions:
   header: Header
+  primary_menu: Primary menu
+  secondary_menu: Secondary menu
+  hero: Hero (full width)
   highlighted: Highlighted
   breadcrumb: Breadcrumb
+  social: Social Bar
   content_above: Content Above
   content: Content
+  sidebar: Sidebar
   content_below: Content Below
-  footer: Footer
-  theme: Theme
+  footer_top: Footer Top
+  footer_bottom: Footer Bottom
 
 ckeditor5-stylesheets:
   - dist/css/base.css
@@ -25,11 +34,8 @@ ckeditor5-stylesheets:
 
 components:
   namespaces:
-    surface: templates/custom
     images: dist/images
     base: source/patterns/base
-    elements: source/patterns/elements
     layouts: source/patterns/layouts
     components: source/patterns/components
-    collections: source/patterns/collections
     theme: source/patterns/theme
