--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -51,6 +51,9 @@ settings:
         -
           label: Button
           element: '<a class="button">'
+    linkit_extension:
+      linkit_enabled: true
+      linkit_profile: default
     media_media:
       allow_view_mode_override: true
 image_upload:
