--- a/config/sync/filter.format.full_html.yml
+++ b/config/sync/filter.format.full_html.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.full
   module:
     - editor
+    - linkit
     - media
 name: 'Full HTML'
 format: full_html
@@ -41,7 +42,7 @@ filters:
     status: true
     weight: -50
     settings:
-      allowed_html: '<br> <p> <h2> <h3> <h4> <a class="button" href> <strong> <em> <sub> <sup> <blockquote> <ul> <ol reversed start> <li> <hr> <drupal-media data-entity-type data-entity-uuid alt data-view-mode data-caption data-align>'
+      allowed_html: '<br> <p> <h2> <h3> <h4> <a class="button" href data-entity-type data-entity-uuid data-entity-substitution> <strong> <em> <sub> <sup> <blockquote> <ul> <ol reversed start> <li> <hr> <drupal-media data-entity-type data-entity-uuid alt data-view-mode data-caption data-align>'
       filter_html_help: true
       filter_html_nofollow: false
   filter_html_escape:
@@ -75,6 +76,14 @@ filters:
     weight: -40
     settings:
       filter_url_length: 72
+  linkit:
+    id: linkit
+    provider: linkit
+    status: true
+    weight: 0
+    settings:
+      title: true
+      media_substitution: metadata
   media_embed:
     id: media_embed
     provider: media
